--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 version: '3.8'
 services:
   db:
-    image: mysql:8.0
+    image: mysql:latest
     cap_add:
       - SYS_NICE
     restart: always
     environment:
       - MYSQL_DATABASE=test-task-db
       - MYSQL_ROOT_PASSWORD=mauFJcuf5dhRMQrjj
+      - MYSQL_USER=root
     ports:
       - '3306:3306'
     volumes:
