--- a/.eslintrc
+++ b/.eslintrc
@@ -4,8 +4,8 @@
     "project": "tsconfig.json",
     "sourceType": "module"
   },
-  "plugins": ["import", "@typescript-eslint/eslint-plugin", "typescript-sort-keys", "sort-destructure-keys"],
-  "extends": ["plugin:@typescript-eslint/recommended", "plugin:prettier/recommended", "plugin:typescript-sort-keys/recommended"],
+  "plugins": ["@typescript-eslint/eslint-plugin", "prettier"],
+  "extends": ["plugin:@typescript-eslint/recommended", "plugin:import/recommended", "plugin:import/typescript", "prettier"],
   "root": true,
   "env": {
     "node": true,
@@ -13,90 +13,14 @@
   },
   "ignorePatterns": [".eslintrc.js"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/explicit-member-accessibility": [
-      "warn",
-      {
-        "overrides": {
-          "constructors": "no-public",
-          "methods": "explicit",
-          "properties": "off",
-          "parameterProperties": "explicit"
-        }
-      }
-    ],
-    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "prettier/prettier": "error",
     "@typescript-eslint/interface-name-prefix": "off",
-    "@typescript-eslint/member-ordering": [
-      "warn",
-      {
-        "default": {
-          "memberTypes": [
-            "private-static-field",
-            "public-static-field",
-            "private-instance-field",
-            "public-instance-field",
-            "private-constructor",
-            "public-constructor",
-            "private-instance-method",
-            "protected-instance-method",
-            "public-instance-method"
-          ],
-          "order": "alphabetically"
-        }
-      }
-    ],
-    "@typescript-eslint/no-empty-interface": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "arrow-parens": ["error", "always"],
-    "sort-destructure-keys/sort-destructure-keys": 2,
-    "sort-keys": "warn",
-    "typescript-sort-keys/interface": "warn",
-    "typescript-sort-keys/string-enum": "warn",
-    "import/order": [
-      "warn",
-      {
-        "alphabetize": {
-          "caseInsensitive": true,
-          "order": "asc"
-        },
-        "groups": [["builtin", "external"], "internal", "parent", "sibling", "index"],
-        "newlines-between": "always",
-        "pathGroups": [{ "group": "internal", "pattern": "@/**" }],
-        "pathGroupsExcludedImportTypes": []
-      }
-    ],
-    "import/prefer-default-export": "off",
-    "max-classes-per-file": ["error", 1],
-    "max-len": ["error", 130],
-    "no-console": "warn",
-    "no-duplicate-imports": "warn",
-    "no-empty-pattern": "warn",
-    "no-return-await": "error",
-    "no-trailing-spaces": "error",
-    "object-shorthand": "error",
-    "lines-between-class-members": ["error", "always", { "exceptAfterSingleLine": true }],
-    "padding-line-between-statements": [
-      "error",
-      { "blankLine": "always", "next": "*", "prev": ["const", "let"] },
-      { "blankLine": "always", "next": "class", "prev": "*" },
-      { "blankLine": "always", "next": "export", "prev": "*" },
-      { "blankLine": "any", "next": "export", "prev": "export" },
-      { "blankLine": "always", "next": "for", "prev": "*" },
-      { "blankLine": "always", "next": "function", "prev": "*" },
-      { "blankLine": "always", "next": "if", "prev": "*" },
-      { "blankLine": "always", "next": "*", "prev": "if" },
-      { "blankLine": "always", "next": "return", "prev": "*" },
-      { "blankLine": "always", "next": "switch", "prev": "*" },
-      { "blankLine": "always", "next": "try", "prev": "*" },
-      { "blankLine": "always", "next": "while", "prev": "*" },
-      { "blankLine": "any", "next": ["const", "let"], "prev": ["const", "let"] }
-    ]
-  },
-  "settings": {
-    "import/resolver": {
-      "typescript": {}
-    }
+    "@typescript-eslint/ban-ts-comment": [2, { "ts-ignore": "allow-with-description" }],
+    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/ban-types": "off",
+    "import/order": 2
   }
 }
