--- a/package.json
+++ b/package.json
@@ -30,17 +30,13 @@
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "pdfkit": "^0.13.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-react": "^7.29.4",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.4.1",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -48,13 +44,19 @@
     "@types/jest": "28.1.8",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/pdfkit": "^0.12.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.29.4",
+    "husky": "^7.0.4",
     "jest": "28.1.3",
+    "lint-staged": "^12.4.1",
     "prettier": "^2.8.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
