--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "passport-jwt": "^4.0.0",
     "pdfkit": "^0.13.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -42,8 +46,10 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.14",
     "@types/jest": "28.1.8",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.7",
     "@types/pdfkit": "^0.12.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
